tests/ui/traits/issue-20692.stderr
error[E0038]: the trait `Array` is not dyn compatible
  --> $DIR/issue-20692.rs:7:5
   |
LL |     &dyn Array;
   |     ^^^^^^^^^^ `Array` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/issue-20692.rs:1:14
   |
LL | trait Array: Sized + Copy {}
   |       -----  ^^^^^   ^^^^ ...because it requires `Self: Sized`
   |       |      |
   |       |      ...because it requires `Self: Sized`
   |       this trait is not dyn compatible...

error[E0038]: the trait `Array` is not dyn compatible
  --> $DIR/issue-20692.rs:4:13
   |
LL |     let _ = x
   |             ^ `Array` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/issue-20692.rs:1:14
   |
LL | trait Array: Sized + Copy {}
   |       -----  ^^^^^   ^^^^ ...because it requires `Self: Sized`
   |       |      |
   |       |      ...because it requires `Self: Sized`
   |       this trait is not dyn compatible...
   = note: required for the cast from `&T` to `&dyn Array`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
